--- a/config/database.yml
+++ b/config/database.yml
@@ -5,11 +5,11 @@
 #   gem 'sqlite3'
 #
 default: &default
-  adapter: sqlite3
+  adapter: mysql2
   encoding: utf8
   pool: 5
-  username: ****
-  password: ****
+  username: root
+  password: root
   timeout: 5000
 
 development:
